manifests/jovian-prod/pterodactyl-panel/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ptero-panel
  namespace: jovian-prod
  labels:
    app: ptero-panel
    service: pterodactyl
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: ptero-panel
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: ptero-panel
    spec:
      nodeSelector:
        connection: standard
      containers:
      - name: database
        image: mariadb:10.5
        imagePullPolicy: Always
        ports:
        - containerPort: 3306
          name: ptero-db
          protocol: TCP
        volumeMounts:
        - name: ptero-panel-config
          mountPath: /var/lib/mysql
          subPath: db
      - name: cache
        image: redis:alpine
        imagePullPolicy: Always
        ports:
        - containerPort: 6379
          name: ptero-redis
          protocol: TCP
      - name: panel
        image: ghcr.io/pterodactyl/panel:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: ptero-http
          protocol: TCP
        volumeMounts:
        - name: ptero-panel-config
          mountPath: /app/var/
          subPath: var
        - name: ptero-panel-config
          mountPath: /etc/nginx/http.d/
          subPath: nginx
        - name: ptero-panel-config
          mountPath: /etc/letsencrypt/
          subPath: certs
        - name: ptero-panel-config
          mountPath: /app/storage/logs
          subPath: logs
      volumes:
      - name: ptero-panel-config
        persistentVolumeClaim:
          claimName: ptero-panel-pvc
          readOnly: false
