manifests/jovian-prod/pterodactyl-panel/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ptero-service
  namespace: jovian-prod
spec:
  selector:
    app: ptero-panel
  ports:
    - port: 80
      targetPort: ptero-http
      protocol: TCP
      name: ptero-http
